Add homepage prop for deploying GitHub pages

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "athletic-insights",
   "version": "0.0.0",
+  "homepage": "https://brodiefriday.github.io/athletic-insights",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
